--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,7 +1,7 @@
 // $color-primary: #f59a83;
-$color-primary: #eb2913;
-$color-grad-1: #916903;
-$color-grad-2: #2b0401;
+$color-primary: #d05802;
+$color-grad-1: #f0c865;
+$color-grad-2: #620a04;
 
 $color-grey-light-1: #f9f5f3; // Light background
 $color-grey-light-2: #f2efee; // Light lines
